--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "gday-cli",
-  "version": "3.10.0",
+  "version": "3.11.0",
   "description": "Personal calendar and task management CLI that integrates Google Calendar with daily workflows",
   "main": "bin/gday",
   "bin": {
     "gday": "./bin/gday"
   },
   "scripts": {
-    "test": "bash -c './bin/gday --help | grep -q \"VERSION: 3.10.0\"'"
+    "test": "bash -c './bin/gday --help | grep -q \"VERSION: 3.11.0\"'",
+    "screenshot": "node screenshot-generator.js"
+  },
+  "devDependencies": {
+    "puppeteer": "^23.0.0"
   },
   "repository": {
     "type": "git",
@@ -35,9 +39,6 @@
     "linux"
   ],
   "dependencies": {},
-  "peerDependencies": {
-    "gcalcli": "*"
-  },
   "files": [
     "bin/",
     "lib/",
